Examples/Semantics/fail/addedlet-string+string.cl
class Foo {
	bar() : Int
	{
		let a:String in a + let b:String in b
	};
};